<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    style="@style/Widget.Home_widget_2.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/layout_bg"
    android:backgroundTint="#0B011C"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:theme="@style/Theme.Home_widget_2.AppWidgetContainer">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:text="@string/nha_trang"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/_29"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnSpan="4"
            android:text="@string/most_cloudy"
            android:textAlignment="viewEnd"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/day0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/_20"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/_20"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/_20"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:text="@string/_20"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/day4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:layout_gravity="center_horizontal"
            android:text="@string/_20"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/icon0"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/clear"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/heavycloud"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/lightcloud"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/showers"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/thunderstorm"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/temp0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_28"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/temp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_28"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/temp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_28"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/temp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_28"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/temp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="4"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_28"
            android:textColor="#FFFFFF" />

    </GridLayout>
</RelativeLayout>